add new paragraph

--- a/nav.html
+++ b/nav.html
@@ -28,7 +28,9 @@
             <li><a href="">Profile</a></li>
         </ul>
     </nav>
-    <section></section>
+    <section>
+
+    </section>
 </body>
 
 </html>
