--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<p>I am software developer</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla excepturi cupiditate ut quod repudiandae dolores,
+        sint nisi accusantium ducimus dolorem quisquam quas atque iusto. Illum hic optio nisi mollitia odit.</p>
+
+</body>
+
+</html>
